[gd_scene load_steps=6 format=3 uid="uid://26sdep47xssj"]

[ext_resource type="FontFile" uid="uid://e0dk132vrmf8" path="res://assets/Pixel Bug.otf" id="1_c2u1v"]
[ext_resource type="Script" uid="uid://1lw7cq5qvwch" path="res://scripts/options.gd" id="1_yjkok"]
[ext_resource type="PackedScene" uid="uid://cqa6wvdx22niq" path="res://scenes/options_background.tscn" id="2_kv8mn"]
[ext_resource type="PackedScene" uid="uid://ci3e8foshsdo7" path="res://scenes/confirmation_popup.tscn" id="3_2iy26"]
[ext_resource type="PackedScene" uid="uid://bk6j0x0hdlfb6" path="res://scenes/crt.tscn" id="5_1sggn"]

[node name="Options" type="Control"]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjkok")

[node name="OptionsBackground" parent="." instance=ExtResource("2_kv8mn")]
offset = Vector2(0, 400)
scale = Vector2(2.5, 2.5)
transform = Transform2D(2.5, 0, 0, 2.5, 0, 400)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -189.5
offset_right = 82.5
offset_bottom = 189.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.43137255)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 48
text = "OPTIONS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AudioSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AudioLabel" type="Label" parent="MarginContainer/VBoxContainer/AudioSection"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 32
text = "AUDIO"
horizontal_alignment = 1

[node name="MusicControl" type="HBoxContainer" parent="MarginContainer/VBoxContainer/AudioSection"]
layout_mode = 2
alignment = 1

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer/AudioSection/MusicControl"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 24
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/AudioSection/MusicControl"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 24)
layout_mode = 2
value = 80.0

[node name="MusicValueLabel" type="Label" parent="MarginContainer/VBoxContainer/AudioSection/MusicControl"]
unique_name_in_owner = true
layout_mode = 2
text = "80%"

[node name="SFXControl" type="HBoxContainer" parent="MarginContainer/VBoxContainer/AudioSection"]
layout_mode = 2
alignment = 1

[node name="SFXLabel" type="Label" parent="MarginContainer/VBoxContainer/AudioSection/SFXControl"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 24
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer/AudioSection/SFXControl"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 24)
layout_mode = 2
value = 80.0

[node name="SFXValueLabel" type="Label" parent="MarginContainer/VBoxContainer/AudioSection/SFXControl"]
unique_name_in_owner = true
layout_mode = 2
text = "80%"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveLabel" type="Label" parent="MarginContainer/VBoxContainer/SaveSection"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 32
text = "SAVE DATA"
horizontal_alignment = 1

[node name="ResetSaveButton" type="Button" parent="MarginContainer/VBoxContainer/SaveSection"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Resets high scores and progress"
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 24
text = "Reset Save"

[node name="ResetTutorialButton" type="Button" parent="MarginContainer/VBoxContainer/SaveSection"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Show tutorial again on next play"
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 24
text = "Reset Tutorial"

[node name="ResetAllButton" type="Button" parent="MarginContainer/VBoxContainer/SaveSection"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Resets everything, including settings"
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 24
text = "Reset All"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlsSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="MarginContainer/VBoxContainer/ControlsSection"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 32
text = "CONTROLS"
horizontal_alignment = 1

[node name="ControlsButton" type="Button" parent="MarginContainer/VBoxContainer/ControlsSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 24
text = "Edit Controls"

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 32
text = "Go Back"

[node name="Camera2D" type="Camera2D" parent="MarginContainer"]
position = Vector2(-310, -144)
anchor_mode = 0

[node name="CRT" parent="MarginContainer/Camera2D" instance=ExtResource("5_1sggn")]
offset_left = -150.0
offset_top = -100.0
offset_right = 1050.0
offset_bottom = 700.0
scale = Vector2(1.25, 1.25)

[node name="Confirmation Popup" parent="." instance=ExtResource("3_2iy26")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 0.0
offset_top = 0.0
offset_right = -1200.0
offset_bottom = -800.0
